--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
                 <li><a href="#">Sign up</a></li>
             </ul>
         </header>
+        <main>
+            <div class="main-text">
+                <h1>
+                    Own your calm space <br> in your <span>head</span> and <span>body</span>
+                </h1>
+                <p class="main-text-par">
+                    Get a fit and healthy body at the comfort of <br> your home
+                </p>
+                <a  class="know-more-buttom" href="#">
+                    KNOW MORE
+                </a>
+            </div>
+            <div class="main-img">
+                <img class="main-img-img" src="./img/main-img.png" alt="main image">
+            </div>
+        </main>
     </div>
+    <footer>
+        <p class="made-by">
+            made by Oleg
+        </p>
+    </footer>
 </body>
 
 </html>
