--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main>
             <div class="main-text">
                 <h1>
-                    Own your calm space <br> in your <span>head</span> and <span>body</span>
+                    Own your calm space <br> in your <span class="color-word">head</span> and <span class="color-word">body</span>
                 </h1>
                 <p class="main-text-par">
                     Get a fit and healthy body at the comfort of <br> your home
