--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         <p class="made-by">
             made by Oleg
         </p>
+        <p class="made-by">
+            made by Oleg
+        </p>
+        <p class="made-by">
+            made by Oleg
+        </p>
     </footer>
 </body>
 
