FIRST commit before create SECTION

--- a/index.html
+++ b/index.html
@@ -19,29 +19,32 @@
                 </a>
                 <a class="brandname" href="#">Bellefit</a>
             </div>
-            <ul>
+            <ul class="menu-list">
                 <li><a href="#">Live</a></li>
                 <li><a href="#">Plan</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Log in</a></li>
                 <li><a href="#">Sign up</a></li>
             </ul>
+            <div class="hamburger">
+
+            </div>
         </header>
         <main>
-            <div class="main-text">
-                <h1>
-                    Own your calm space <br> in your <span class="color-word">head</span> and <span class="color-word">body</span>
-                </h1>
-                <p class="main-text-par">
-                    Get a fit and healthy body at the comfort of <br> your home
-                </p>
-                <a  class="know-more-buttom" href="#">
-                    KNOW MORE
-                </a>
-            </div>
-            <div class="main-img">
-                <img class="main-img-img" src="./img/main-img.png" alt="main image">
-            </div>
+                <div class="main-text">
+                    <h1>
+                        Own your calm space in your <span class="color-word">head</span> and <span class="color-word">body</span>
+                    </h1>
+                    <p class="main-text-par">
+                        Get a fit and healthy body at the comfort of your home
+                    </p>
+                    <a  class="know-more-buttom" href="#">
+                        KNOW MORE
+                    </a>
+                </div>
+                <div class="main-img">
+                    <img class="main-img-img" src="./img/main-img.png" alt="main image">
+                </div>
         </main>
     </div>
     <footer>
