first commit after SECTION

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
         </header>
         <main>
+            <section class="advice">
                 <div class="main-text">
                     <h1>
                         Own your calm space in your <span class="color-word">head</span> and <span class="color-word">body</span>
@@ -45,6 +46,22 @@
                 <div class="main-img">
                     <img class="main-img-img" src="./img/main-img.png" alt="main image">
                 </div>
+            </section>
+
+            <section class="way">
+                <div class="atom">
+                    <img class="atom-png" src="./img/atom.png" alt="atom">
+                </div>
+                <div class="maint-text-way">
+                    Fastest way to organize
+                </div>
+                <div class="main-test-par-way">
+                    Slate helps you see how many 
+                    more days you need to work
+                    to reach your financial goal
+                    for the month and year.
+                </div>
+            </section>
         </main>
     </div>
     <footer>
