--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
                     Fastest way to organize
                 </div>
                 <div class="main-test-par-way">
-                    Slate helps you see how many 
-                    more days you need to work
-                    to reach your financial goal
-                    for the month and year.
+                    Slate helps you see how many more days you need to work
+                    to reach your financial goal for the month and year.
                 </div>
             </section>
         </main>
